# mine-sweeper

./: README.md  mise.toml
.bruno/: Flag Cell.bru  Get Game Info.bru  Open Cell.bru  Start Game.bru  bruno.json
client/: package.json
client/src/: App.tsx  Providers.tsx  hooks.ts  main.tsx  types.ts
client/src/components/: CellButton.tsx  Game.tsx  GameWrapper.tsx
server/: pyproject.toml
server/api/: models.py  urls.py  views.py
server/api/migrations/: 0001_initial.py
server/server/: settings.py
