[project]
name = "server"
version = "0.1.0"
description = ""
authors = [{ name = "Benjamin Palko", email = "benjaminpalko@hotmail.com" }]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
  "ruff (>=0.14.6,<0.15.0)",
  "django (>=5.2.8,<6.0.0)",
  "django-types (>=0.22.0,<0.23.0)",
  "django-stubs-ext (>=5.2.7,<6.0.0)",
  "django-cors-headers (>=4.9.0,<5.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
